--- a/My_Theme_Collection/NewKemonoFriends.theme.css
+++ b/My_Theme_Collection/NewKemonoFriends.theme.css
@@ -27,6 +27,11 @@
   background: none;
 }
 
+.contentWrapper_f7506e {
+    background-color: rgba(0, 0, 0, .6);  
+    box-shadow: none;
+}
+
 /* (*NEW*) Members List */
 .page_d20375 /* (Members List *NEW*) */ {
     background: none!important;
@@ -780,12 +785,6 @@
 .theme-dark .paymentHeader_a28a08 {
     border: none;
 }
-
-.contentWrapper_f7506e {
-    background-color: rgba(0, 0, 0, .6);  
-    box-shadow: none;
-}
-  
 
 .theme-dark .paginator_f66684 {
     background: none;
@@ -1692,8 +1691,7 @@
 .userProfileInnerThemedNonPremium_c69a7b,
 .biteSizeInnerThemed_c69a7b,
 .fullSizeInnerThemed_c69a7b {
-    background-color: rgba(0, 0, 0, .5);
-    background: none;
+    background-color: #000 !important;
 }
 
 .userProfileInnerThemedWithBanner_c69a7b,
@@ -1702,7 +1700,34 @@
 .fullSizeInnerThemed_c69a7b:has(.bannerSVGWrapper_b32cc2 .fullSizeBannerPremium_c3e427),
 .theme-dark .biteSizeInnerThemed_c69a7b:has(.bannerSVGWrapper_b32cc2 .biteSizeBanner_c3e427),
 .theme-dark .fullSizeInnerThemed_c69a7b:has(.bannerSVGWrapper_b32cc2 .fullSizeBanner_c3e427) {
-    background: rgba(0, 0, 0, .5);
+    background: #000 !important;
+}
+
+.body_b07019,
+.tags_c32acf,
+.descriptionClamp_fc5c48 .markup_f8f345 {
+  color: white !important;
+}
+
+.hoverColor_f9d37d,
+.pronounsText_c32acf,
+.descriptionClamp_fc5c48 .text-sm\/normal_dc00ef {
+  color: inherit !important;
+}
+
+#app-mount .biteSizeOverlayBackground_c69a7b, 
+#app-mount .fullSizeOverlayBackground_c69a7b {
+  color: white;
+}
+
+.biteSizeOverlayBackground_c69a7b :where(.headerText_ae1fa2, .heading-sm\/semibold_dc00ef, .text-xs\/normal_dc00ef), 
+.fullSizeOverlayBackground_c69a7b :where(.headerText_ae1fa2, .heading-sm\/semibold_dc00ef, .text-xs\/normal_dc00ef) {
+  color: inherit !important;
+}
+
+.biteSizeOverlayBackground_c69a7b .contextMenu_ae1fa2 path, 
+.fullSizeOverlayBackground_c69a7b .contextMenu_ae1fa2 path  {
+  fill: currentColor;
 }
 
 .userProfileOuterThemed_c69a7b.userProfileOuter_c69a7b,
@@ -1954,6 +1979,7 @@
 .listRow_e4be58 {
     color: white;
     border-radius: 4px;
+    border: 2px solid transparent;
 }
 
 .searchBar_a46bef {
@@ -2292,6 +2318,10 @@ button.button_adca65 {
     background-color: rgba(204, 102, 119, .54);
 }
 
+.selected_d808b0 .layout_d808b0 {
+  background-color: rgba(0, 0, 0, .2);
+}
+
 .clickable_d808b0.container_d808b0:active,
 .highlighted_d808b0.container_d808b0,
 .selected_d808b0.container_d808b0 {
@@ -2595,6 +2625,10 @@ button.button_adca65 {
     opacity: .5;
 }
 
+.link_d8bfb3 {
+   border: 2px outset transparent;
+}
+
 .wrapper_d8bfb3:hover .link_d8bfb3 {
     background-color: rgba(204, 102, 119, .39);
     border: 2px outset rgba(204, 102, 119, .49);
@@ -2617,7 +2651,7 @@ button.button_adca65 {
 .modeSelected_d8bfb3 .link_d8bfb3,
 .modeSelected_d8bfb3:hover .link_d8bfb3 {
     background-color: rgba(255, 68, 68, .52);
-    border: 2px inset #f44;
+    border: 2px outset #f44;
 }
 
 .jumpButton_ac90a2 {
@@ -4958,3 +4992,52 @@ button.button_adca65.enabled_adca65:hover {
 .theme-dark .sidebarContainer_a3a4ce {
     background: none;
 }
+
+/* New Activity Stuff */
+.popoutContentWrapper_a35965 {
+    background: #1C1C1C;
+    color: white;
+}
+
+.popoutContentWrapper_a35965 :where(.defaultColor_a595eb, .menuIcon_aa0ae7, .popoutHeroBody_a35965, .badgeContainer_d60c6d div) {
+    color: inherit !important;
+}
+
+.badgeContainer_d60c6d path {
+    fill: currentColor;
+}
+
+.interactionsContainer_a35965 {
+    background-color: #1C1C1C;
+}
+
+.spriteGreyscale_d91a75 {
+    background-color: white;
+}
+
+.hero_a35965.theme-dark.images-dark {
+    background: none !important;
+}
+
+.interactionsContainerHeader_a35965 {
+    border-top: none;
+    background-color: transparent;
+}
+
+.replyInput_d0fc0d {
+    background: transparent;
+    border: 1px solid rgba(255, 255, 255, .25);
+}
+
+.membersGroup_cbd271 path {
+    fill: currentColor;
+}
+
+.container_c64476 {
+    border-radius: 4px;
+    border: 1px solid rgba(255, 255, 255, .25);
+    background: none !important;
+    ;
+}
+
+/* New Activity Stuff */
