--- a/My_Theme_Collection/NightTimeMountain.theme.css
+++ b/My_Theme_Collection/NightTimeMountain.theme.css
@@ -14,6 +14,11 @@
     background-color: rgba(69, 69, 69, 0.5);
 }
 
+.contentWrapper_f7506e {
+    background-color: rgba(0, 0, 0, .6);  
+    box-shadow: none;
+}
+
 .theme-dark .scrollerContainer_c6b11b, 
 .theme-dark .emptyPage_c6b11b,
 .separator_c6b11b {
@@ -736,12 +741,6 @@
     text-shadow: 0 1px 6px black, 0 3px 6px black;
 }
 
-.contentWrapper_f7506e {
-    background-color: rgba(0, 0, 0, .6);  
-    box-shadow: none;
-}
-  
-
 .after_inlineCode_cdb578, 
 .before_inlineCode_cdb578, 
 .inlineCode_cdb578 {
@@ -780,7 +779,34 @@
 .fullSizeInnerThemed_c69a7b:has(.bannerSVGWrapper_b32cc2 .fullSizeBannerPremium_c3e427),
 .theme-dark .biteSizeInnerThemed_c69a7b:has(.bannerSVGWrapper_b32cc2 .biteSizeBanner_c3e427),
 .theme-dark .fullSizeInnerThemed_c69a7b:has(.bannerSVGWrapper_b32cc2 .fullSizeBanner_c3e427) {
-    background: linear-gradient(63deg, #4b5569 0%, #2d353f 89%);
+    background: linear-gradient(63deg, #4b5569 0%, #2d353f 89%) !important;
+}
+
+.body_b07019,
+.tags_c32acf,
+.descriptionClamp_fc5c48 .markup_f8f345 {
+  color: white !important;
+}
+
+.hoverColor_f9d37d,
+.pronounsText_c32acf,
+.descriptionClamp_fc5c48 .text-sm\/normal_dc00ef {
+  color: inherit !important;
+}
+
+#app-mount .biteSizeOverlayBackground_c69a7b, 
+#app-mount .fullSizeOverlayBackground_c69a7b {
+  color: white;
+}
+
+.biteSizeOverlayBackground_c69a7b :where(.headerText_ae1fa2, .heading-sm\/semibold_dc00ef, .text-xs\/normal_dc00ef), 
+.fullSizeOverlayBackground_c69a7b :where(.headerText_ae1fa2, .heading-sm\/semibold_dc00ef, .text-xs\/normal_dc00ef) {
+  color: inherit !important;
+}
+
+.biteSizeOverlayBackground_c69a7b .contextMenu_ae1fa2 path, 
+.fullSizeOverlayBackground_c69a7b .contextMenu_ae1fa2 path  {
+  fill: currentColor;
 }
 
 .userProfileOuter_c69a7b {
@@ -4626,3 +4652,52 @@ button.button_adca65.enabled_adca65:hover {
 .theme-dark .sidebarContainer_a3a4ce {
     background: none;
 }
+
+/* New Activity Stuff */
+.popoutContentWrapper_a35965 {
+    background: #1C1C1C;
+    color: white;
+}
+
+.popoutContentWrapper_a35965 :where(.defaultColor_a595eb, .menuIcon_aa0ae7, .popoutHeroBody_a35965, .badgeContainer_d60c6d div) {
+    color: inherit !important;
+}
+
+.badgeContainer_d60c6d path {
+    fill: currentColor;
+}
+
+.interactionsContainer_a35965 {
+    background-color: #1C1C1C;
+}
+
+.spriteGreyscale_d91a75 {
+    background-color: white;
+}
+
+.hero_a35965.theme-dark.images-dark {
+    background: none !important;
+}
+
+.interactionsContainerHeader_a35965 {
+    border-top: none;
+    background-color: transparent;
+}
+
+.replyInput_d0fc0d {
+    background: transparent;
+    border: 1px solid rgba(255, 255, 255, .25);
+}
+
+.membersGroup_cbd271 path {
+    fill: currentColor;
+}
+
+.container_c64476 {
+    border-radius: 4px;
+    border: 1px solid rgba(255, 255, 255, .25);
+    background: none !important;
+    ;
+}
+
+/* New Activity Stuff */
