--- a/My_Theme_Collection/Old-AkameGaKill-Theme.theme.css
+++ b/My_Theme_Collection/Old-AkameGaKill-Theme.theme.css
@@ -11,6 +11,11 @@
   background-image: url(https://images5.alphacoders.com/542/542751.jpg);
 }
 
+.contentWrapper_f7506e {
+  background-color: rgba(0, 0, 0, .6);  
+  box-shadow: none;
+}
+
 .theme-dark .scrollerContainer_c6b11b, 
 .theme-dark .emptyPage_c6b11b,
 .separator_c6b11b {
@@ -2241,12 +2246,6 @@ button.button_adca65.enabled_adca65:hover {
   background: linear-gradient(342deg, rgba(0, 0, 0, 1) 10%, #9b2742 100%);
 }
 
-.contentWrapper_f7506e {
-  background-color: rgba(0, 0, 0, .6);  
-  box-shadow: none;
-}
-
-
 .theme-dark .scrollableContainer_d0696b {
   background-color: transparent;
 }
@@ -2843,7 +2842,7 @@ button.button_adca65.enabled_adca65:hover {
   background-color: rgba(0, 0, 0, .3) !important;
 }
 
-.wrapper_fd07a3 {
+.wrapper_c4cd66 {
   overflow: visible;
 }
 
@@ -2858,7 +2857,7 @@ button.button_adca65.enabled_adca65:hover {
   opacity: .4 !important;
 }
 
-.wrapper_fd07a3 {
+.wrapper_c4cd66 {
   z-index: 1;
 }
 
@@ -3453,7 +3452,7 @@ button.button_adca65.enabled_adca65:hover {
 .userProfileInnerThemedNonPremium_c69a7b,
 .biteSizeInnerThemed_c69a7b,
 .fullSizeInnerThemed_c69a7b {
-  background: linear-gradient(342deg, rgba(0, 0, 0, 1) 10%, #9b2742 100%);
+  background: linear-gradient(342deg, rgba(0, 0, 0, 1) 10%, #9b2742 100%) !important;
 }
 
 .userProfileInnerThemedWithBanner_c69a7b,
@@ -3462,7 +3461,34 @@ button.button_adca65.enabled_adca65:hover {
 .fullSizeInnerThemed_c69a7b:has(.bannerSVGWrapper_b32cc2 .fullSizeBannerPremium_c3e427),
 .theme-dark .biteSizeInnerThemed_c69a7b:has(.bannerSVGWrapper_b32cc2 .biteSizeBanner_c3e427),
 .theme-dark .fullSizeInnerThemed_c69a7b:has(.bannerSVGWrapper_b32cc2 .fullSizeBanner_c3e427) {
-  background: linear-gradient(342deg, rgba(0, 0, 0, 1) 10%, #9b2742 100%);
+  background: linear-gradient(342deg, rgba(0, 0, 0, 1) 10%, #9b2742 100%) !important;
+}
+
+.body_b07019,
+.tags_c32acf,
+.descriptionClamp_fc5c48 .markup_f8f345 {
+  color: white !important;
+}
+
+.hoverColor_f9d37d,
+.pronounsText_c32acf,
+.descriptionClamp_fc5c48 .text-sm\/normal_dc00ef {
+  color: inherit !important;
+}
+
+#app-mount .biteSizeOverlayBackground_c69a7b, 
+#app-mount .fullSizeOverlayBackground_c69a7b {
+  color: white;
+}
+
+.biteSizeOverlayBackground_c69a7b :where(.headerText_ae1fa2, .heading-sm\/semibold_dc00ef, .text-xs\/normal_dc00ef), 
+.fullSizeOverlayBackground_c69a7b :where(.headerText_ae1fa2, .heading-sm\/semibold_dc00ef, .text-xs\/normal_dc00ef) {
+  color: inherit !important;
+}
+
+.biteSizeOverlayBackground_c69a7b .contextMenu_ae1fa2 path, 
+.fullSizeOverlayBackground_c69a7b .contextMenu_ae1fa2 path  {
+  fill: currentColor;
 }
 
 .userProfileOuterThemed_c69a7b.userProfileOuter_c69a7b,
@@ -5366,3 +5392,52 @@ button.button_adca65.enabled_adca65:hover {
 .theme-dark .sidebarContainer_a3a4ce {
   background: none;
 }
+
+/* New Activity Stuff */
+.popoutContentWrapper_a35965 {
+  background: #1C1C1C;
+  color: white;
+}
+
+.popoutContentWrapper_a35965 :where(.defaultColor_a595eb, .menuIcon_aa0ae7, .popoutHeroBody_a35965, .badgeContainer_d60c6d div) {
+  color: inherit !important;
+}
+
+.badgeContainer_d60c6d path {
+  fill: currentColor;
+}
+
+.interactionsContainer_a35965 {
+  background-color: #1C1C1C;
+}
+
+.spriteGreyscale_d91a75 {
+  background-color: white;
+}
+
+.hero_a35965.theme-dark.images-dark {
+  background: none !important;
+}
+
+.interactionsContainerHeader_a35965 {
+  border-top: none;
+  background-color: transparent;
+}
+
+.replyInput_d0fc0d {
+  background: transparent;
+  border: 1px solid rgba(255, 255, 255, .25);
+}
+
+.membersGroup_cbd271 path {
+  fill: currentColor;
+}
+
+.container_c64476 {
+  border-radius: 4px;
+  border: 1px solid rgba(255, 255, 255, .25);
+  background: none !important;
+  ;
+}
+
+/* New Activity Stuff */
