--- a/My_Theme_Collection/NewAkameGaKill.theme.css
+++ b/My_Theme_Collection/NewAkameGaKill.theme.css
@@ -2,7 +2,7 @@
  * @name New Akame Ga Kill! Theme
  * @author ShadowDevilsAvenged
  * @description Newer Akame Ga Kill! theme for my return
- * @version 6.9
+ * @version 7
  */
 
 /* Main Background */
@@ -1393,15 +1393,15 @@
     background-image: -webkit-linear-gradient(56deg, #000000 20%, rgb(153, 17, 33, .8) 75%) !important;
 }
 
-.body_b07019,
+.body_a972fe, .body_b8cc6d,
 .tags_c32acf,
-.descriptionClamp_fc5c48 .markup_f8f345 {
+.descriptionClamp_abaf7d .markup_f8f345 {
   color: white !important;
 }
 
 .hoverColor_f9d37d,
 .pronounsText_c32acf,
-.descriptionClamp_fc5c48 .text-sm\/normal_dc00ef {
+.descriptionClamp_abaf7d .text-sm\/normal_dc00ef {
   color: inherit !important;
 }
 
@@ -2444,11 +2444,11 @@ span.button_adca65.enabled_adca65:hover path {
     color: white;
 }
 
-.operations_ed9386 {
+.operations_baf0d6 {
     color: white;
 }
 
-.operations_ed9386>a {
+.operations_baf0d6>a {
     color: #AEC4D4;     
     font-weight: 500;
 }
@@ -3288,8 +3288,8 @@ span.button_adca65.enabled_adca65:hover path {
     background-image: -webkit-linear-gradient(56deg, #000000 20%, rgb(153, 17, 33, .8) 75%);
 }
 
-.icon_f61c73,
-.reactionBtn_f61c73 {
+.icon_ec6b19,
+.reactionBtn_ec6b19 {
     color: white !important;
 }
 
@@ -5092,3 +5092,11 @@ span.button_adca65.enabled_adca65:hover path {
 }
 
 /* New Activity Stuff */
+.button_df39bd {
+  border-radius: 4px;
+  background: black;
+  color: white;
+}
+.viewFullBioColor_abaf7d {
+  color: white;
+}
