--- a/My_Theme_Collection/Old-AkameGaKill-Theme.theme.css
+++ b/My_Theme_Collection/Old-AkameGaKill-Theme.theme.css
@@ -2,7 +2,7 @@
  * @name Old-Akame_Ga_Kill-Theme
  * @author ShadowDevilsAvenged
  * @description Akame from Akame No Kill
- * @version 6.5
+ * @version 6.6
  */
 
  #app-mount .app_a01fb1 {
@@ -1553,7 +1553,7 @@ button.button_adca65.enabled_adca65:hover {
   background: rgba(0, 0, 0, .7);
 }
 
-.theme-dark .operations_ed9386,
+.theme-dark .operations_baf0d6,
 .container_e62b38,
 .wrapper_a08117 {
   color: white;
@@ -3398,7 +3398,7 @@ button.button_adca65.enabled_adca65:hover {
   border: none;
 }
 
-.operations_ed9386>a {
+.operations_baf0d6>a {
   color: lightgreen;
 }
 
@@ -3464,15 +3464,15 @@ button.button_adca65.enabled_adca65:hover {
   background: linear-gradient(342deg, rgba(0, 0, 0, 1) 10%, #9b2742 100%) !important;
 }
 
-.body_b07019,
+.body_a972fe, .body_b8cc6d,
 .tags_c32acf,
-.descriptionClamp_fc5c48 .markup_f8f345 {
+.descriptionClamp_abaf7d .markup_f8f345 {
   color: white !important;
 }
 
 .hoverColor_f9d37d,
 .pronounsText_c32acf,
-.descriptionClamp_fc5c48 .text-sm\/normal_dc00ef {
+.descriptionClamp_abaf7d .text-sm\/normal_dc00ef {
   color: inherit !important;
 }
 
@@ -3773,19 +3773,19 @@ button.button_adca65.enabled_adca65:hover {
   border-radius: 5px;
 }
 
-.reactionBtn_f61c73.forceShowLook_f61c73 {
+.reactionBtn_ec6b19.forceShowLook_ec6b19 {
   background-color: rgba(155, 39, 66, .4);
   border-radius: 4px;
   border: 2px solid transparent;
 }
 
-.reactionBtn_f61c73.forceShowLook_f61c73:hover {
+.reactionBtn_ec6b19.forceShowLook_ec6b19:hover {
   background-color: rgba(173, 57, 80, .4);
   border-color: #ad3950;
 }
 
-.icon_f61c73,
-.reactionBtn_f61c73 {
+.icon_ec6b19,
+.reactionBtn_ec6b19 {
   color: white !important;
 }
 
@@ -5441,3 +5441,12 @@ button.button_adca65.enabled_adca65:hover {
 }
 
 /* New Activity Stuff */
+.button_df39bd {
+  border-radius: 4px;
+  background: black;
+  color: white;
+}
+
+.viewFullBioColor_abaf7d {
+  color: white;
+}
