--- a/My_Theme_Collection/Old-BNHA-Theme.theme.css
+++ b/My_Theme_Collection/Old-BNHA-Theme.theme.css
@@ -2,7 +2,7 @@
  * @name Old BNHA Theme Returns
  * @author ShadowDevilsAvenged
  * @description Say Hello to the BNHA theme once again
- * @version 6.5
+ * @version 6.6
 */
 
 .avatarDecoration_ec86aa {
@@ -1622,7 +1622,7 @@ textarea,
     padding: 8px 5px;
 }
 
-.theme-dark .operations_ed9386,
+.theme-dark .operations_baf0d6,
 .theme-dark .edited_ec86aa {
     color: white;
 }
@@ -2328,7 +2328,7 @@ textarea,
 .quickswitcher_f4e139 a,
 .theme-dark .topic_bf3bbb a,
 .filenameLinkWrapper_b52bef a,
-.operations_ed9386>a,
+.operations_baf0d6>a,
 .theme-dark .welcomeMessage-ULm0mo a,
 .localBotMessage-1cGMdw a,
 .theme-dark .container_e62b38 .content_e62b38 a,
@@ -2642,15 +2642,15 @@ textarea,
     background: linear-gradient(342deg, rgba(0, 0, 0, 1) 10%, #008c99 100%) !important;
 }
 
-.body_b07019,
+.body_a972fe, .body_b8cc6d,
 .tags_c32acf,
-.descriptionClamp_fc5c48 .markup_f8f345 {
+.descriptionClamp_abaf7d .markup_f8f345 {
   color: white !important;
 }
 
 .hoverColor_f9d37d,
 .pronounsText_c32acf,
-.descriptionClamp_fc5c48 .text-sm\/normal_dc00ef {
+.descriptionClamp_abaf7d .text-sm\/normal_dc00ef {
   color: inherit !important;
 }
 
@@ -2982,19 +2982,19 @@ textarea,
     border-radius: 5px;
 }
 
-.reactionBtn_f61c73.forceShowLook_f61c73 {
+.reactionBtn_ec6b19.forceShowLook_ec6b19 {
     border-radius: 5px;
     background-color: #008c99;
     border: 2px solid transparent;
 }
 
-.reactionBtn_f61c73.forceShowLook_f61c73:hover {
+.reactionBtn_ec6b19.forceShowLook_ec6b19:hover {
     background-color: rgba(0, 140, 153, .7);
     border-color: #008c99;
 }
 
-.icon_f61c73,
-.reactionBtn_f61c73 {
+.icon_ec6b19,
+.reactionBtn_ec6b19 {
     color: white !important;
 }
 
@@ -4665,3 +4665,12 @@ textarea,
 }
 
 /* New Activity Stuff */
+.button_df39bd {
+    border-radius: 4px;
+    background: black;
+    color: white;
+}
+
+.viewFullBioColor_abaf7d {
+    color: white;
+}
