--- a/My_Theme_Collection/NewBNHA.theme.css
+++ b/My_Theme_Collection/NewBNHA.theme.css
@@ -2,7 +2,7 @@
  * @name New BNHA Theme
  * @author ShadowDevilsAvenged
  * @description Newer BNHA theme for my return
- * @version 6.5
+ * @version 6.6
  */
 
 /* Main Background */
@@ -1192,15 +1192,15 @@
     background-image: -webkit-radial-gradient(50% 50%, ellipse cover, #22a9bb 0%, #000000 95%) !important;
 }
 
-.body_b07019,
+.body_a972fe, .body_b8cc6d,
 .tags_c32acf,
-.descriptionClamp_fc5c48 .markup_f8f345 {
+.descriptionClamp_abaf7d .markup_f8f345 {
   color: white !important;
 }
 
 .hoverColor_f9d37d,
 .pronounsText_c32acf,
-.descriptionClamp_fc5c48 .text-sm\/normal_dc00ef {
+.descriptionClamp_abaf7d .text-sm\/normal_dc00ef {
   color: inherit !important;
 }
 
@@ -2174,11 +2174,11 @@
     color: white;
 }
 
-.operations_ed9386 {
+.operations_baf0d6 {
     color: white;
 }
 
-.operations_ed9386>a {
+.operations_baf0d6>a {
     color: gold;
     font-weight: bold;
 }
@@ -3046,19 +3046,19 @@
     border-radius: 5px;
 }
 
-.reactionBtn_f61c73.forceShowLook_f61c73 {
+.reactionBtn_ec6b19.forceShowLook_ec6b19 {
     background-color: rgba(34, 170, 187, .4);
     border-radius: 4px;
     border: 2px solid transparent;
 }
 
-.reactionBtn_f61c73.forceShowLook_f61c73:hover {
+.reactionBtn_ec6b19.forceShowLook_ec6b19:hover {
     background-color: rgba(17, 187, 204, .4);
     border-color: #1BC;
 }
 
-.icon_f61c73,
-.reactionBtn_f61c73 {
+.icon_ec6b19,
+.reactionBtn_ec6b19 {
     color: white !important;
 }
 
@@ -4789,3 +4789,13 @@
 }
 
 /* New Activity Stuff */
+.button_df39bd {
+    border-radius: 4px;
+    background: black;
+    color: white;
+}
+
+.viewFullBioColor_abaf7d {
+    color: white;
+}
+  
