--- a/My_Theme_Collection/NewKemonoFriends.theme.css
+++ b/My_Theme_Collection/NewKemonoFriends.theme.css
@@ -2,7 +2,7 @@
  * @name New Kemono Friends Theme
  * @author ShadowDevilsAvenged
  * @description Newer Kemono Friends theme for my return
- * @version 6.7
+ * @version 6.8
  */
 
 /* Main Background */
@@ -25,11 +25,6 @@
 
 .pageBody_c2efea {
   background: none;
-}
-
-.contentWrapper_f7506e {
-    background-color: rgba(0, 0, 0, .6);  
-    box-shadow: none;
 }
 
 /* (*NEW*) Members List */
@@ -785,6 +780,12 @@
 .theme-dark .paymentHeader_a28a08 {
     border: none;
 }
+
+.contentWrapper_f7506e {
+    background-color: rgba(0, 0, 0, .6);  
+    box-shadow: none;
+}
+  
 
 .theme-dark .paginator_f66684 {
     background: none;
@@ -1691,7 +1692,8 @@
 .userProfileInnerThemedNonPremium_c69a7b,
 .biteSizeInnerThemed_c69a7b,
 .fullSizeInnerThemed_c69a7b {
-    background-color: #000 !important;
+    background-color: rgba(0, 0, 0, .5);
+    background: none;
 }
 
 .userProfileInnerThemedWithBanner_c69a7b,
@@ -1700,34 +1702,7 @@
 .fullSizeInnerThemed_c69a7b:has(.bannerSVGWrapper_b32cc2 .fullSizeBannerPremium_c3e427),
 .theme-dark .biteSizeInnerThemed_c69a7b:has(.bannerSVGWrapper_b32cc2 .biteSizeBanner_c3e427),
 .theme-dark .fullSizeInnerThemed_c69a7b:has(.bannerSVGWrapper_b32cc2 .fullSizeBanner_c3e427) {
-    background: #000 !important;
-}
-
-.body_b07019,
-.tags_c32acf,
-.descriptionClamp_fc5c48 .markup_f8f345 {
-  color: white !important;
-}
-
-.hoverColor_f9d37d,
-.pronounsText_c32acf,
-.descriptionClamp_fc5c48 .text-sm\/normal_dc00ef {
-  color: inherit !important;
-}
-
-#app-mount .biteSizeOverlayBackground_c69a7b, 
-#app-mount .fullSizeOverlayBackground_c69a7b {
-  color: white;
-}
-
-.biteSizeOverlayBackground_c69a7b :where(.headerText_ae1fa2, .heading-sm\/semibold_dc00ef, .text-xs\/normal_dc00ef), 
-.fullSizeOverlayBackground_c69a7b :where(.headerText_ae1fa2, .heading-sm\/semibold_dc00ef, .text-xs\/normal_dc00ef) {
-  color: inherit !important;
-}
-
-.biteSizeOverlayBackground_c69a7b .contextMenu_ae1fa2 path, 
-.fullSizeOverlayBackground_c69a7b .contextMenu_ae1fa2 path  {
-  fill: currentColor;
+    background: rgba(0, 0, 0, .5);
 }
 
 .userProfileOuterThemed_c69a7b.userProfileOuter_c69a7b,
@@ -1979,7 +1954,6 @@
 .listRow_e4be58 {
     color: white;
     border-radius: 4px;
-    border: 2px solid transparent;
 }
 
 .searchBar_a46bef {
@@ -2318,10 +2292,6 @@ button.button_adca65 {
     background-color: rgba(204, 102, 119, .54);
 }
 
-.selected_d808b0 .layout_d808b0 {
-  background-color: rgba(0, 0, 0, .2);
-}
-
 .clickable_d808b0.container_d808b0:active,
 .highlighted_d808b0.container_d808b0,
 .selected_d808b0.container_d808b0 {
@@ -2625,10 +2595,6 @@ button.button_adca65 {
     opacity: .5;
 }
 
-.link_d8bfb3 {
-   border: 2px outset transparent;
-}
-
 .wrapper_d8bfb3:hover .link_d8bfb3 {
     background-color: rgba(204, 102, 119, .39);
     border: 2px outset rgba(204, 102, 119, .49);
@@ -2651,7 +2617,7 @@ button.button_adca65 {
 .modeSelected_d8bfb3 .link_d8bfb3,
 .modeSelected_d8bfb3:hover .link_d8bfb3 {
     background-color: rgba(255, 68, 68, .52);
-    border: 2px outset #f44;
+    border: 2px inset #f44;
 }
 
 .jumpButton_ac90a2 {
@@ -2818,11 +2784,11 @@ button.button_adca65 {
     border-right-color: #C67;
 }
 
-.operations_ed9386 {
+.operations_baf0d6 {
     color: white;
 }
 
-.operations_ed9386>a {
+.operations_baf0d6>a {
     color: #f44;
 }
 
@@ -3317,19 +3283,19 @@ button.button_adca65.enabled_adca65:hover {
     border-radius: 5px;
 }
 
-.reactionBtn_f61c73.forceShowLook_f61c73 {
+.reactionBtn_ec6b19.forceShowLook_ec6b19 {
     background-color: rgba(255, 68, 68, .4);
     border-radius: 4px;
     border: 1px solid transparent;
 }
 
-.reactionBtn_f61c73.forceShowLook_f61c73:hover {
+.reactionBtn_ec6b19.forceShowLook_ec6b19:hover {
     background-color: rgba(204, 102, 119, .4);
     border-color: #C67;
 }
 
-.icon_f61c73,
-.reactionBtn_f61c73 {
+.icon_ec6b19,
+.reactionBtn_ec6b19 {
     color: white !important;
 }
 
@@ -4993,51 +4959,12 @@ button.button_adca65.enabled_adca65:hover {
     background: none;
 }
 
-/* New Activity Stuff */
-.popoutContentWrapper_a35965 {
-    background: #1C1C1C;
+.button_df39bd {
+    border-radius: 4px;
+    background: black;
     color: white;
 }
 
-.popoutContentWrapper_a35965 :where(.defaultColor_a595eb, .menuIcon_aa0ae7, .popoutHeroBody_a35965, .badgeContainer_d60c6d div) {
-    color: inherit !important;
+.viewFullBioColor_abaf7d {
+    color: white;
 }
-
-.badgeContainer_d60c6d path {
-    fill: currentColor;
-}
-
-.interactionsContainer_a35965 {
-    background-color: #1C1C1C;
-}
-
-.spriteGreyscale_d91a75 {
-    background-color: white;
-}
-
-.hero_a35965.theme-dark.images-dark {
-    background: none !important;
-}
-
-.interactionsContainerHeader_a35965 {
-    border-top: none;
-    background-color: transparent;
-}
-
-.replyInput_d0fc0d {
-    background: transparent;
-    border: 1px solid rgba(255, 255, 255, .25);
-}
-
-.membersGroup_cbd271 path {
-    fill: currentColor;
-}
-
-.container_c64476 {
-    border-radius: 4px;
-    border: 1px solid rgba(255, 255, 255, .25);
-    background: none !important;
-    ;
-}
-
-/* New Activity Stuff */
