--- a/My_Theme_Collection/NewRemTheme.theme.css
+++ b/My_Theme_Collection/NewRemTheme.theme.css
@@ -2,7 +2,7 @@
  * @name New Rem Theme
  * @author ShadowDevilsAvenged
  * @description Newer Rem theme for my return
- * @version 6.6
+ * @version 6.7
  */
 
  .app_a01fb1 {
@@ -1582,15 +1582,15 @@
     background-image: -webkit-repeating-linear-gradient(-48deg, #000000 30%, #1a1a1a 35%) !important;
 }
 
-.body_b07019,
+.body_a972fe, .body_b8cc6d,
 .tags_c32acf,
-.descriptionClamp_fc5c48 .markup_f8f345 {
+.descriptionClamp_abaf7d .markup_f8f345 {
   color: white !important;
 }
 
 .hoverColor_f9d37d,
 .pronounsText_c32acf,
-.descriptionClamp_fc5c48 .text-sm\/normal_dc00ef {
+.descriptionClamp_abaf7d .text-sm\/normal_dc00ef {
   color: inherit !important;
 }
 
@@ -3175,19 +3175,19 @@ button.button_adca65.enabled_adca65:hover {
     border-radius: 5px;
 }
 
-.reactionBtn_f61c73.forceShowLook_f61c73 {
+.reactionBtn_ec6b19.forceShowLook_ec6b19 {
     border-radius: 5px;
     background-color: rgba(97, 165, 216, .5);
     border: 2px solid transparent;
 }
 
-.reactionBtn_f61c73.forceShowLook_f61c73:hover {
+.reactionBtn_ec6b19.forceShowLook_ec6b19:hover {
     background-color: rgba(118, 170, 217, .5);
     border-color: #76AAD9;
 }
 
-.icon_f61c73,
-.reactionBtn_f61c73 {
+.icon_ec6b19,
+.reactionBtn_ec6b19 {
     color: white !important;
 }
 
@@ -4734,3 +4734,12 @@ background-color: #1f3dff
 }
 
 /* New Activity Stuff */
+.button_df39bd {
+    border-radius: 4px;
+    background: black;
+    color: white;
+}
+
+.viewFullBioColor_abaf7d {
+    color: white;
+}
