--- a/My_Theme_Collection/NightTimeMountain.theme.css
+++ b/My_Theme_Collection/NightTimeMountain.theme.css
@@ -2,7 +2,7 @@
  * @name Night Time Mountain
  * @author ShadowDevilsAvenged
  * @description Nice view of the mountain in the night time
- * @version 4.1
+ * @version 4.2
 */
 
 .app_a01fb1 {
@@ -782,15 +782,15 @@
     background: linear-gradient(63deg, #4b5569 0%, #2d353f 89%) !important;
 }
 
-.body_b07019,
+.body_a972fe, .body_b8cc6d,
 .tags_c32acf,
-.descriptionClamp_fc5c48 .markup_f8f345 {
+.descriptionClamp_abaf7d .markup_f8f345 {
   color: white !important;
 }
 
 .hoverColor_f9d37d,
 .pronounsText_c32acf,
-.descriptionClamp_fc5c48 .text-sm\/normal_dc00ef {
+.descriptionClamp_abaf7d .text-sm\/normal_dc00ef {
   color: inherit !important;
 }
 
@@ -1611,7 +1611,7 @@
     border: 1px solid rgba(149, 168, 176, .6);
 }
 
-#app-mount .reactionBtn_f61c73,
+#app-mount .reactionBtn_ec6b19,
 #app-mount .reactionCount_ec6b19,
 #app-mount .reactionCount_f61c73 {
     color: white;
@@ -2184,11 +2184,11 @@
     background-color: #95A8B0;
 }
 
-.operations_ed9386 {
+.operations_baf0d6 {
     color: white;
 }
 
-.operations_ed9386>a {
+.operations_baf0d6>a {
     color: #D0DFFF;
 }
 
@@ -4701,3 +4701,12 @@ button.button_adca65.enabled_adca65:hover {
 }
 
 /* New Activity Stuff */
+.button_df39bd {
+    border-radius: 4px;
+    background: black;
+    color: white;
+}
+
+.viewFullBioColor_abaf7d {
+    color: white;
+}
