--- a/My_Theme_Collection/TeamRam.theme.css
+++ b/My_Theme_Collection/TeamRam.theme.css
@@ -2,7 +2,7 @@
  * @name Team Ram
  * @author ShadowDevilsAvenged
  * @description Team Ram is back once again(big request to bring this back)
- * @version 4.3
+ * @version 4.4
 */
 
 /* Ram Main Picture */
@@ -490,15 +490,15 @@
     background-position: 50% 50% !important;
 }
 
-.body_b07019,
+.body_a972fe, .body_b8cc6d,
 .tags_c32acf,
-.descriptionClamp_fc5c48 .markup_f8f345 {
+.descriptionClamp_abaf7d .markup_f8f345 {
   color: white !important;
 }
 
 .hoverColor_f9d37d,
 .pronounsText_c32acf,
-.descriptionClamp_fc5c48 .text-sm\/normal_dc00ef {
+.descriptionClamp_abaf7d .text-sm\/normal_dc00ef {
   color: inherit !important;
 }
 
@@ -2172,12 +2172,12 @@ button.button_adca65.enabled_adca65:hover {
     background-color: rgba(0, 0, 0, .2);
 }
 
-.operations_ed9386 {
+.operations_baf0d6 {
     color: white;
 }
 
 .fakeLink_cdb578,
-.operations_ed9386>a {
+.operations_baf0d6>a {
     color: #f3acc5;
     text-shadow: 0 2px 0 black, 0 2px 0 black, 
     0 2px 0 black, 0 2px 0 black, 0 2px 0 black;
@@ -3147,13 +3147,13 @@ button.button_adca65.enabled_adca65:hover {
     color: white;
 }
 
-#app-mount .reactionBtn_f61c73.forceShowLook_f61c73 {
+#app-mount .reactionBtn_ec6b19.forceShowLook_ec6b19 {
     background-color: #f3acc5;
     border: none;
 }
 
-#app-mount .reactionBtn_f61c73,
-.reactionBtn_f61c73:hover .icon_f61c73 {
+#app-mount .reactionBtn_ec6b19,
+.reactionBtn_ec6b19:hover .icon_ec6b19 {
     color: white;
 }
 
@@ -4557,3 +4557,12 @@ button.button_adca65.enabled_adca65:hover {
 }
 
 /* New Activity Stuff */
+.button_df39bd {
+    border-radius: 4px;
+    background: black;
+    color: white;
+}
+
+.viewFullBioColor_abaf7d {
+    color: white;
+}
