--- a/My_Theme_Collection/Youtube_Nation.theme.css
+++ b/My_Theme_Collection/Youtube_Nation.theme.css
@@ -2,7 +2,7 @@
  * @name Youtube Nation
  * @author ShadowDevilsAvenged
  * @description The Storage of All Videos
- * @version 3.8
+ * @version 3.9
 */
 
 .app_a01fb1, 
@@ -588,15 +588,15 @@
     background: #282828 !important;
 }
 
-.body_b07019,
+.body_a972fe, .body_b8cc6d,
 .tags_c32acf,
-.descriptionClamp_fc5c48 .markup_f8f345 {
+.descriptionClamp_abaf7d .markup_f8f345 {
   color: white !important;
 }
 
 .hoverColor_f9d37d,
 .pronounsText_c32acf,
-.descriptionClamp_fc5c48 .text-sm\/normal_dc00ef {
+.descriptionClamp_abaf7d .text-sm\/normal_dc00ef {
   color: inherit !important;
 }
 
@@ -1202,11 +1202,11 @@
     box-shadow: none;
 }
 
-.operations_ed9386 {
+.operations_baf0d6 {
     color: #F1F1F1;
 }
 
-.operations_ed9386 a {
+.operations_baf0d6 a {
     color:#3ea6ff;
 }
 
@@ -2607,18 +2607,18 @@
     background-color: transparent;
 }
 
-.reactionBtn_f61c73.forceShowLook_f61c73 {
+.reactionBtn_ec6b19.forceShowLook_ec6b19 {
     background-color: rgba(255, 255, 255, .1);
     border: 1px solid rgba(255, 255, 255, .1);
 }
 
-.reactionBtn_f61c73.forceShowLook_f61c73:hover {
+.reactionBtn_ec6b19.forceShowLook_ec6b19:hover {
     background-color: rgba(255, 255, 255, .2);
     border-color: rgba(255, 255, 255, .2);
 }
 
-.icon_f61c73, 
-.reactionBtn_f61c73 {
+.icon_ec6b19, 
+.reactionBtn_ec6b19 {
     color: #F1F1F1;
 }
 
@@ -4601,3 +4601,13 @@ button.button_adca65.enabled_adca65:hover {
 }
 
 /* New Activity Stuff */
+
+.button_df39bd {
+    border-radius: 4px;
+    background: black;
+    color: white;
+}
+
+.viewFullBioColor_abaf7d {
+    color: white;
+}
