--- a/My_Theme_Collection/NewAkameGaKill.theme.css
+++ b/My_Theme_Collection/NewAkameGaKill.theme.css
@@ -2,7 +2,7 @@
  * @name New Akame Ga Kill! Theme
  * @author ShadowDevilsAvenged
  * @description Newer Akame Ga Kill! theme for my return
- * @version 7
+ * @version 7.1
  */
 
 /* Main Background */
@@ -15,6 +15,14 @@
 .contentWrapper_f7506e {
     background-color: rgba(0, 0, 0, .6);  
     box-shadow: none;
+}
+
+.footer_aa1bff {
+    background: none;
+}
+
+.gradient_aa1bff {
+    opacity: 0 !important;
 }
 
 /* (*NEW*) Members List */
@@ -2301,7 +2309,7 @@ span.button_adca65.enabled_adca65:hover path {
     color: white !important;
 }
 
-.theme-dark .scrollableContainer_d0696b {
+.theme-dark .scrollableContainer_bdf0de {
     background-color: transparent;
     border-radius: 5px;
 }
@@ -2363,7 +2371,7 @@ span.button_adca65.enabled_adca65:hover path {
 .placeholder_a552a6,
 .slateTextArea_e52116 .hljs-comment,
 .slateTextArea_e52116 .hljs-quote,
-.textArea_d0696b,
+.textArea_bdf0de,
 .codeBlockSyntax_cdb578,
 .syntaxAfter_cdb578,
 .syntaxBefore_cdb578 {
@@ -2625,7 +2633,7 @@ span.button_adca65.enabled_adca65:hover path {
     background: transparent;
 }
 
-.attachedBars_d0696b {
+.stackedBars_bdf0de {
     background: rgba(153, 17, 34, .3);
 }
 
@@ -3769,7 +3777,7 @@ span.button_adca65.enabled_adca65:hover path {
     border-radius: 2px;
 }
 
-.progress_a4623d[style*="background-color: var(--background-modifier-active);"] {
+.progress_b52bef[style*="background-color: var(--background-modifier-active);"] {
     background-color: transparent !important;
 }
 
