--- a/My_Theme_Collection/NewRemTheme.theme.css
+++ b/My_Theme_Collection/NewRemTheme.theme.css
@@ -2,7 +2,7 @@
  * @name New Rem Theme
  * @author ShadowDevilsAvenged
  * @description Newer Rem theme for my return
- * @version 6.7
+ * @version 6.8
  */
 
  .app_a01fb1 {
@@ -15,6 +15,13 @@
 .theme-dark .emptyPage_c6b11b,
 .separator_c6b11b {
   background-color: transparent;
+}
+.footer_aa1bff {
+    background: none;
+}
+
+.gradient_aa1bff {
+    opacity: 0 !important;
 }
 
 #app-mount .container_f1fd9c /* Channel and Roles */,
@@ -1001,7 +1008,7 @@
     border: none;
 }
 
-.theme-dark .scrollableContainer_d0696b {
+.theme-dark .scrollableContainer_bdf0de {
     background-color: transparent;
 }
 
@@ -1017,7 +1024,7 @@
 .placeholder_a552a6,
 .slateTextArea_e52116 .hljs-comment,
 .slateTextArea_e52116 .hljs-quote,
-.textArea_d0696b,
+.textArea_bdf0de,
 .codeBlockSyntax_cdb578,
 .syntaxAfter_cdb578,
 .syntaxBefore_cdb578 {
@@ -1291,7 +1298,7 @@
     background: transparent;
 }
 
-.attachedBars_d0696b {
+.stackedBars_bdf0de {
     background: rgba(0, 0, 0, .5);
 }
 
@@ -1381,7 +1388,7 @@
 }
 
 
-.progress_a4623d[style*="background-color: var(--background-modifier-active);"] {
+.progress_b52bef[style*="background-color: var(--background-modifier-active);"] {
     background-color: #61A5D8 !important;
 }
 
