--- a/My_Theme_Collection/Old-AkameGaKill-Theme.theme.css
+++ b/My_Theme_Collection/Old-AkameGaKill-Theme.theme.css
@@ -2,7 +2,7 @@
  * @name Old-Akame_Ga_Kill-Theme
  * @author ShadowDevilsAvenged
  * @description Akame from Akame No Kill
- * @version 6.6
+ * @version 6.7
  */
 
  #app-mount .app_a01fb1 {
@@ -14,6 +14,13 @@
 .contentWrapper_f7506e {
   background-color: rgba(0, 0, 0, .6);  
   box-shadow: none;
+}
+
+.footer_aa1bff {
+  background: none;
+}
+.gradient_aa1bff {
+  opacity: 0 !important;
 }
 
 .theme-dark .scrollerContainer_c6b11b, 
@@ -1521,7 +1528,7 @@ button.button_adca65.enabled_adca65:hover {
 }
 
 .icon_de3e42,
-.textArea_d0696b,
+.textArea_bdf0de,
 .codeBlockSyntax_cdb578,
 .syntaxAfter_cdb578,
 .syntaxBefore_cdb578 {
@@ -1585,7 +1592,7 @@ button.button_adca65.enabled_adca65:hover {
   background-color: #9b2742;
 }
 
-.progress_a4623d[style*="background-color: rgb(233, 231, 231);"] {
+.progress_b52bef[style*="background-color: rgb(233, 231, 231);"] {
   background-color: transparent !important;
 }
 
@@ -2246,7 +2253,7 @@ button.button_adca65.enabled_adca65:hover {
   background: linear-gradient(342deg, rgba(0, 0, 0, 1) 10%, #9b2742 100%);
 }
 
-.theme-dark .scrollableContainer_d0696b {
+.theme-dark .scrollableContainer_bdf0de {
   background-color: transparent;
 }
 
