--- a/My_Theme_Collection/Old-BNHA-Theme.theme.css
+++ b/My_Theme_Collection/Old-BNHA-Theme.theme.css
@@ -2,7 +2,7 @@
  * @name Old BNHA Theme Returns
  * @author ShadowDevilsAvenged
  * @description Say Hello to the BNHA theme once again
- * @version 6.6
+ * @version 6.7
 */
 
 .avatarDecoration_ec86aa {
@@ -15,6 +15,14 @@
 .contentWrapper_f7506e {
     background-color: rgba(0, 0, 0, .6);  
     box-shadow: none;
+}
+
+.footer_aa1bff {
+    background: none;
+}
+
+.gradient_aa1bff {
+    opacity: 0 !important;
 }
 
 .theme-dark .scrollerContainer_c6b11b, 
@@ -999,7 +1007,7 @@ textarea,
 }
 
 
-.theme-dark .scrollableContainer_d0696b {
+.theme-dark .scrollableContainer_bdf0de {
     background-color: rgba(33, 31, 31, 0.804);
 }
 
@@ -1237,7 +1245,7 @@ textarea,
     background-color: #008c99;
 }
 
-.progress_a4623d[style*="background-color: rgb(233, 231, 231);"] {
+.progress_b52bef[style*="background-color: rgb(233, 231, 231);"] {
     background-color: transparent !important;
 }
 
