--- a/My_Theme_Collection/TeamRem.theme.css
+++ b/My_Theme_Collection/TeamRem.theme.css
@@ -2,7 +2,7 @@
  * @name Team Rem
  * @author ShadowDevilsAvenged
  * @description Team Rem is back once again(big request to bring this back)
- * @version 4.4
+ * @version 4.5
 */
 
 /* Rem Main Picture */
@@ -14,6 +14,14 @@
 .contentWrapper_f7506e {
     background-color: rgba(0, 0, 0, .6);  
     box-shadow: none;
+}
+
+.footer_aa1bff {
+    background: none;
+}
+
+.gradient_aa1bff {
+    opacity: 0 !important;
 }
 
 .theme-dark .scrollerContainer_c6b11b, 
@@ -578,7 +586,7 @@
     border-radius: 4px;
 }
 
-.theme-dark .scrollableContainer_d0696b {
+.theme-dark .scrollableContainer_bdf0de {
     background-color: transparent;
     border-radius: 4px;
 }
@@ -2198,7 +2206,7 @@ button.button_adca65.enabled_adca65:hover {
 
 .replyBar_b11c5e, 
 .threadSuggestionBar_b11c5e,
-.attachedBars_d0696b {
+.stackedBars_bdf0de {
     background: transparent;
 }
 
@@ -2256,7 +2264,7 @@ button.button_adca65.enabled_adca65:hover {
 }
 
 /* Progress Bar */
-.progress_a4623d[style*="background-color: var(--background-modifier-active);"] {
+.progress_b52bef[style*="background-color: var(--background-modifier-active);"] {
     background-color: transparent !important;
 }
   
