--- a/My_Theme_Collection/NewAkameGaKill.theme.css
+++ b/My_Theme_Collection/NewAkameGaKill.theme.css
@@ -2,7 +2,7 @@
  * @name New Akame Ga Kill! Theme
  * @author ShadowDevilsAvenged
  * @description Newer Akame Ga Kill! theme for my return
- * @version 7.1
+ * @version 7.2
  */
 
 /* Main Background */
@@ -17,11 +17,11 @@
     box-shadow: none;
 }
 
-.footer_aa1bff {
+.footer_f8ec41 {
     background: none;
 }
 
-.gradient_aa1bff {
+.gradient_f8ec41 {
     opacity: 0 !important;
 }
 
@@ -411,7 +411,7 @@
     background-image: linear-gradient(0deg, transparent, transparent 1px, #AEC4D4 0, #AEC4D4 2px, transparent 0);
 }
 
-.backdrop__1a911 {
+.backdrop_e4f2ae {
     background-color: rgba(0, 0, 0, .4) !important;
 }
 
@@ -1387,17 +1387,17 @@
 }
 
 .userProfileInnerThemedNonPremium_c69a7b,
-.biteSizeInnerThemed_c69a7b,
-.fullSizeInnerThemed_c69a7b {
+#app-mount .biteSize_c69a7b,
+#app-mount .fullSize_c69a7b {
     background-image: -webkit-linear-gradient(56deg, #000000 20%, rgb(153, 17, 33, .8) 75%) !important;
 }
 
 .userProfileInnerThemedWithBanner_c69a7b,
 .userProfileInnerThemedPremiumWithoutBanner_c69a7b,
-.biteSizeInnerThemed_c69a7b:has(.bannerSVGWrapper_b32cc2 .biteSizeBannerPremium_c3e427),
-.fullSizeInnerThemed_c69a7b:has(.bannerSVGWrapper_b32cc2 .fullSizeBannerPremium_c3e427),
-.theme-dark .biteSizeInnerThemed_c69a7b:has(.bannerSVGWrapper_b32cc2 .biteSizeBanner_c3e427),
-.theme-dark .fullSizeInnerThemed_c69a7b:has(.bannerSVGWrapper_b32cc2 .fullSizeBanner_c3e427) {
+#app-mount .biteSize_c69a7b:has(.bannerSVGWrapper_b32cc2 .biteSizeBannerPremium_c3e427),
+#app-mount .fullSize_c69a7b:has(.bannerSVGWrapper_b32cc2 .fullSizeBannerPremium_c3e427),
+#app-mount .biteSize_c69a7b:has(.bannerSVGWrapper_b32cc2 .biteSizeBanner_c3e427),
+#app-mount .fullSize_c69a7b:has(.bannerSVGWrapper_b32cc2 .fullSizeBanner_c3e427) {
     background-image: -webkit-linear-gradient(56deg, #000000 20%, rgb(153, 17, 33, .8) 75%) !important;
 }
 
@@ -1688,12 +1688,12 @@
   background-color: transparent;
 }
 
-.mediaBarGrabber_f7877e,
+.mediaBarGrabber_d12f5a,
 .mediaBarProgress_d12f5a,
 .mediaBarProgress_d12f5a:after,
 .mediaBarProgress_d12f5a:before,
-.mediaBarInteraction_d12f5a:hover .mediaBarGrabber_f7877e,
-.mediaBarInteractionDragging_d12f5a .mediaBarGrabber_f7877e,
+.mediaBarInteraction_d12f5a:hover .mediaBarGrabber_d12f5a,
+.mediaBarInteractionDragging_d12f5a .mediaBarGrabber_d12f5a,
 .mediaBarPreview_d12f5a,
 .mediaBarPreview_d12f5a:after,
 .mediaBarPreview_d12f5a:before {
@@ -2294,18 +2294,18 @@ span.button_adca65.enabled_adca65:hover path {
     border-radius: 4px;
 }
 
-.tabBar_c1519f,
+.tabBar_ecc04c,
 .userInfoSection_a24910+.userInfoSection_a24910 {
     border: none;
 }
 
-.connectedAccountContainer_f3eb60 {
+.connectedAccountContainer_ab12c6 {
     border: 2px ridge #C13;
     background-color: rgba(153, 17, 33, .77);
     border-radius: 6px;
 }
 
-.connectedAccountNameText_f3eb60[style*="color:"] {
+.connectedAccountContainer_ab12c6[style*="color:"] {
     color: white !important;
 }
 
@@ -2465,7 +2465,7 @@ span.button_adca65.enabled_adca65:hover path {
     border-radius: 5px;
 }
 
-.avatarSpeaking_c51b4e {
+.avatarSpeaking_d80634 {
     border: 2px solid #C13;
     box-shadow: none;
     border-radius: 5px;
@@ -4245,7 +4245,7 @@ span.button_adca65.enabled_adca65:hover path {
     color: #AEC4D4;
 }
 
-.note_c90ad7 textarea:focus {
+.note_d53fbd textarea:focus {
     background-color: rgba(0, 0, 0, .09);
 }
 
