--- a/My_Theme_Collection/NewBNHA.theme.css
+++ b/My_Theme_Collection/NewBNHA.theme.css
@@ -18,11 +18,11 @@
   background-color: transparent;
 }
 
-.footer_f8ec41 {
+.footer_d71945 {
     background: none;
 }
 
-.gradient_f8ec41 {
+.gradient_d71945 {
     opacity: 0 !important;
 }
 
@@ -1159,13 +1159,14 @@
     background-color: rgba(0, 0, 0, .2);
 }
 
-.overlayBackground_c69a7b,
+.theme-dark 
+.overlay_c69a7b,
 #app-mount .fullSizeOverlayBackground_c69a7b {
     background-color: transparent;
 }
 
 
-.userProfileOuterUnthemed_c69a7b {
+.theme-dark .outer_c69a7b {
     background-color: transparent;
 }
 
