--- a/My_Theme_Collection/NewRemTheme.theme.css
+++ b/My_Theme_Collection/NewRemTheme.theme.css
@@ -2,7 +2,7 @@
  * @name New Rem Theme
  * @author ShadowDevilsAvenged
  * @description Newer Rem theme for my return
- * @version 6.9
+ * @version 7
  */
 
  .app_a01fb1 {
@@ -16,11 +16,12 @@
 .separator_c6b11b {
   background-color: transparent;
 }
-.footer_f8ec41 {
+
+.footer_d71945 {
     background: none;
 }
 
-.gradient_f8ec41 {
+.gradient_d71945 {
     opacity: 0 !important;
 }
 
@@ -1401,7 +1402,7 @@
     color: white;
 }
 
-.attachment_b52bef {
+.theme-dark .file_f46c86 {
     border-color: transparent;
     background-color: rgba(0, 0, 0, .25);
 }
@@ -1545,11 +1546,12 @@
 }
 
 
-.userProfileOuterUnthemed_c69a7b {
+.theme-dark .outer_c69a7b {
     background-color: transparent;
 }
 
-.overlayBackground_c69a7b,
+.theme-dark 
+.overlay_c69a7b,
 #app-mount .fullSizeOverlayBackground_c69a7b {
     background-color: transparent;
 }
