--- a/My_Theme_Collection/NightTimeMountain.theme.css
+++ b/My_Theme_Collection/NightTimeMountain.theme.css
@@ -14,11 +14,11 @@
     background-color: rgba(69, 69, 69, 0.5);
 }
 
-.footer_f8ec41 {
+.footer_d71945 {
     background: none;
 }
 
-.gradient_f8ec41 {
+.gradient_d71945 {
     opacity: 0 !important;
 }
 
@@ -829,7 +829,8 @@
     display: none;
 }
 
-.overlayBackground_c69a7b,
+.theme-dark 
+.overlay_c69a7b,
 #app-mount .fullSizeOverlayBackground_c69a7b {
     background-color: rgba(0, 0, 0, .3);
 }
