--- a/My_Theme_Collection/Old-AkameGaKill-Theme.theme.css
+++ b/My_Theme_Collection/Old-AkameGaKill-Theme.theme.css
@@ -16,10 +16,10 @@
   box-shadow: none;
 }
 
-.footer_f8ec41 {
+.footer_d71945 {
   background: none;
 }
-.gradient_f8ec41 {
+.gradient_d71945 {
   opacity: 0 !important;
 }
 
@@ -1600,7 +1600,7 @@ button.button_adca65.enabled_adca65:hover {
   background-color: #9b2742 !important;
 }
 
-.theme-dark .attachment_b52bef,
+.theme-dark .theme-dark .file_f46c86,
 .embedFull_b0068a,
 .wrapper_a71a1c {
   border-color: transparent;
@@ -2943,8 +2943,8 @@ button.button_adca65.enabled_adca65:hover {
 .bda-slist .bda-footer a,
 .markup_f8f345 a,
 .welcomeMessage-ULm0mo a,
-.theme-dark .filenameLinkWrapper_b52bef,
-.theme-dark .filenameLinkWrapper_b52bef a,
+.theme-dark .filenameLinkWrapper_f46c86,
+.theme-dark .filenameLinkWrapper_f46c86 a,
 .topic_bf3bbb a,
 .emptyStateCTA_f4e139 a,
 .helpText-h3r3wC a,
@@ -3431,11 +3431,12 @@ button.button_adca65.enabled_adca65:hover {
 }
 
 
-.userProfileOuterUnthemed_c69a7b {
+.theme-dark .outer_c69a7b {
   background-color: transparent;
 }
 
-.overlayBackground_c69a7b,
+.theme-dark 
+.overlay_c69a7b,
 #app-mount .fullSizeOverlayBackground_c69a7b {
   background-color: transparent;
 }
