--- a/My_Theme_Collection/Old-BNHA-Theme.theme.css
+++ b/My_Theme_Collection/Old-BNHA-Theme.theme.css
@@ -17,11 +17,11 @@
     box-shadow: none;
 }
 
-.footer_f8ec41 {
+.footer_d71945 {
     background: none;
 }
 
-.gradient_f8ec41 {
+.gradient_d71945 {
     opacity: 0 !important;
 }
 
@@ -1263,7 +1263,7 @@ textarea,
     color: white;
 }
 
-.theme-dark .attachment_b52bef {
+.theme-dark .theme-dark .file_f46c86 {
     border-color: transparent;
     background-color: rgba(0, 0, 0, 0.3);
 }
@@ -2335,7 +2335,7 @@ textarea,
 .mutedChannelsHook_f1ed13,
 .quickswitcher_f4e139 a,
 .theme-dark .topic_bf3bbb a,
-.filenameLinkWrapper_b52bef a,
+.filenameLinkWrapper_f46c86 a,
 .operations_baf0d6>a,
 .theme-dark .welcomeMessage-ULm0mo a,
 .localBotMessage-1cGMdw a,
@@ -2610,12 +2610,13 @@ textarea,
     background-color: rgba(0, 0, 0, .2);
 }
 
-.overlayBackground_c69a7b,
+.theme-dark 
+.overlay_c69a7b,
 #app-mount .fullSizeOverlayBackground_c69a7b {
     background-color: transparent;
 }
 
-.userProfileOuterUnthemed_c69a7b {
+.theme-dark .outer_c69a7b {
     background-color: transparent;
 }
 
