--- a/My_Theme_Collection/TeamRam.theme.css
+++ b/My_Theme_Collection/TeamRam.theme.css
@@ -2,7 +2,7 @@
  * @name Team Ram
  * @author ShadowDevilsAvenged
  * @description Team Ram is back once again(big request to bring this back)
- * @version 4.6
+ * @version 4.7
 */
 
 /* Ram Main Picture */
@@ -11,17 +11,17 @@
     background-size: cover;
 }
 
-.contentWrapper_f7506e {
-    background-color: rgba(0, 0, 0, .6);  
-    box-shadow: none;
-}
-
-.footer_f8ec41 {
+.footer_d71945 {
     background: none;
 }
 
-.gradient_f8ec41 {
+.gradient_d71945 {
     opacity: 0 !important;
+}
+
+.contentWrapper_f7506e {
+    background-color: rgba(0, 0, 0, .6);  
+    box-shadow: none;
 }
 
 .theme-dark .scrollerContainer_c6b11b, 
@@ -525,7 +525,7 @@
   fill: currentColor;
 }
 
-.userProfileOuterUnthemed_c69a7b,
+.theme-dark .outer_c69a7b,
 .userProfileOuterThemed_c69a7b {
     background: transparent;
 }
@@ -553,7 +553,8 @@
     border-radius: 4px;
 }
 
-.overlayBackground_c69a7b,
+.theme-dark 
+.overlay_c69a7b,
 #app-mount .fullSizeOverlayBackground_c69a7b {
     background-color: rgba(0,0,0,.7);
     border-radius: 4px;
